--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
          <artifactId>portals-bridges-struts</artifactId>
          <version>1.2.7-1.0</version>
       </dependency>
+	<dependency>
+		<groupId>org.apache.struts</groupId>
+		<artifactId>struts-tiles</artifactId>
+		<version>1.3.5</version>
+	</dependency>
       <!--dependency>
          <groupId>org.apache.struts</groupId>
          <artifactId>struts-extras</artifactId>
