--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
            <artifactId>standard</artifactId>
            <version>1.0.4</version>
        </dependency-->
-
+	   <dependency>
+		   <groupId>commons-logging</groupId>
+		   <artifactId>commons-logging</artifactId>
+		   <version>1.1.1</version>
+	   </dependency>
    </dependencies>
    <build>
       <finalName>struts-example</finalName>
